# PyDebugMCP

./: .gitignore  README.md  README_KO.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: release.yml
PyDebugMCP/: __main__.py  bridge_client.py  bridge_info.py  config.py  errors.py  server.py
src/extension/: index.ts
src/shared/: bridge-info.ts  types.ts
